# audit-trail-PoC

./: .gitignore  MANIFEST.in  README.md  audit_trail.jsonl  pyproject.toml
.github/workflows/: ci.yml
.llm-audit/: config.yaml  decisions.yaml
examples/: fastapi_app.py  hf_train_stub.py  register_and_train_stub.py
llm_audit_trail/: __init__.py  config.py  core.py  datasets.py  decisions.py  fastapi.py  hf.py  registry.py
llm_audit_trail.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm_audit_trail/providers/: __init__.py  base.py
llm_audit_trail/schemas/: approval.schema.json  attestation.schema.json  dataset_registered.schema.json  riskwaiver.schema.json
llm_audit_trail_cli/: __init__.py  main.py
tests/: test_cli.py  test_core.py  test_integrations.py  test_verify.py
