[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-audit-trail"
dynamic = ["version"]
description = "Tamper-evident audit trails for LLM lifecycles: training, deployment, and monitoring."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Victor Ojewale", email = "victor_ojewale@brown.edu" }]
keywords = ["audit", "provenance", "governance", "compliance", "llm", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
dependencies = ["PyYAML>=5.1"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "starlette>=0.37"]
hf = ["transformers>=4.30.0"]
dev = ["pytest>=7.0", "fastapi>=0.100", "httpx>=0.24", "build>=1.0", "twine>=5.0"]

[project.scripts]
llm-audit = "llm_audit_trail_cli.main:main"

[project.urls]
Homepage = "https://github.com/victorojewale/audit-trail-PoC"
Source = "https://github.com/victorojewale/audit-trail-PoC"
Issues = "https://github.com/victorojewale/audit-trail-PoC/issues"

[tool.setuptools.dynamic]
version = { attr = "llm_audit_trail.__version__" }

[tool.setuptools]
packages = [
    "llm_audit_trail",
    "llm_audit_trail.providers",
    "llm_audit_trail_cli",
]

[tool.setuptools.package-data]
llm_audit_trail = ["schemas/*.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
